# BitStack

./: CMakeLists.txt  README.md
src/: main.cpp
src/bitstack/: bitstack.cpp  bitstack.h
